--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "smart-actions-tool-example",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun run index.ts",
+    "run:docker": "sh docker-setup.sh"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -9,6 +13,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.0.5",
     "@ref-finance/ref-sdk": "^1.3.4",
     "elysia": "^1.0.13"
   }
